fix icon spacing in url bar

--- a/frontend/app/block/block.less
+++ b/frontend/app/block/block.less
@@ -221,15 +221,6 @@
                             font-size: 11px;
                         }
                     }
-
-                    .block-frame-div-url,
-                    .block-frame-div-search {
-                        background: rgba(255, 255, 255, 0.1);
-
-                        input {
-                            opacity: 1;
-                        }
-                    }
                 }
 
                 .block-frame-end-icons {
